[project]
name = "coreutils"
version = "0.0.10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "aiocache>=0.12.3",
    "packaging>=25.0",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
redis = [
    "redis>=6.2.0",
]
prometheus = [
    "prometheus-client>=0.22.1",
    "starlette>=0.47.3",
]
nats_utils = [
    "faststream>=0.5.43",
    "nats-py>=2.10.0,<3",
]
faststream = [
    "faststream>=0.5.43",
]
signer_client = [
    "aiohttp>=3.12.15",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "sentry-sdk>=2.32.0",
    "types-redis>=4.6.0.20241004",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*"
python_functions = "test_*"
python_classes = "TestSuite*"
addopts = "-p no:cacheprovider"
asyncio_default_fixture_loop_scope = "function"
log_level = "INFO"

[tool.coverage.run]
branch = true
source = ["coreutils"]
command_line = "-m pytest"

[tool.coverage.xml]
output = "coverage_report.xml"

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == __main__:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 88
lint.select = [
    "BLE",
    "C90",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "ISC",
    "PLE",
    "Q",
    "RUF006",
    "RUF100",
    "S",
    "T10",
    "T20",
    "TID",
    "UP",
    "W",
]
lint.ignore = ["ISC001"]
lint.fixable = ["ALL"]
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["coreutils" , "tests"]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.extend-per-file-ignores]
"test_*" = ["S101", "S311", "ANN001"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "aiocache.*",
    "structlog.*",
]
ignore_missing_imports = true

